set size for star half in product-evaulute

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -118,7 +118,8 @@
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-              <img class="evaluate-product__img" src="./assets/images/products/star-half.svg" alt="star-full">
+              <img class="evaluate-product__img evaluate-product__img--half"
+                src="./assets/images/products/star-half.svg" alt="star-full">
             </div>
             <p class="product__feedback-score">4.5/<span class="product__feedback-score-max">5</span></p>
           </div>
@@ -134,7 +135,8 @@
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-              <img class="evaluate-product__img" src="./assets/images/products/star-half.svg" alt="star-full">
+              <img class="evaluate-product__img evaluate-product__img--half"
+                src="./assets/images/products/star-half.svg" alt="star-full">
             </div>
             <p class="product__feedback-score">3.5/<span class="product__feedback-score-max">5</span></p>
           </div>
@@ -153,7 +155,8 @@
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-              <img class="evaluate-product__img" src="./assets/images/products/star-half.svg" alt="star-full">
+              <img class="evaluate-product__img evaluate-product__img--half"
+                src="./assets/images/products/star-half.svg" alt="star-full">
             </div>
             <p class="product__feedback-score">4.5/<span class="product__feedback-score-max">5</span></p>
           </div>
@@ -170,7 +173,8 @@
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-              <img class="evaluate-product__img" src="./assets/images/products/star-half.svg" alt="star-full">
+              <img class="evaluate-product__img evaluate-product__img--half"
+                src="./assets/images/products/star-half.svg" alt="star-full">
             </div>
             <p class="product__feedback-score">4.5/<span class="product__feedback-score-max">5</span></p>
           </div>
@@ -233,7 +237,7 @@
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
             </div>
-            <p class="product__feedback-score">3.5/<span class="product__feedback-score-max">5</span></p>
+            <p class="product__feedback-score">3.0/<span class="product__feedback-score-max">5</span></p>
           </div>
           <div class="product__price price">
             <p>&#36;80</p>
@@ -248,7 +252,8 @@
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-              <img class="evaluate-product__img" src="./assets/images/products/star-half.svg" alt="star-full">
+              <img class="evaluate-product__img evaluate-product__img--half"
+                src="./assets/images/products/star-half.svg" alt="star-full">
             </div>
             <p class="product__feedback-score">4.5/<span class="product__feedback-score-max">5</span></p>
           </div>
@@ -355,7 +360,7 @@
       </legend>
       <div class="footer__action container">
         <div class="footer__item">
-          <h2><img class="footer__logo" src="./assets/images/headers/shopco.png" alt="shopco"></h2>
+          <img class="footer__logo" src="./assets/images/headers/shopco.png" alt="shopco">
           <p class="footer__desc desc">We have clothes that suits your style and which you’re proud to
             wear. From
             women
