creat module navbar

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -22,7 +22,7 @@
   <!-- sign up end  -->
 
   <!-- header start  -->
-  <header>
+  <header class="header">
     <nav class="navbar container">
       <button class="navbar__nav"><img src="assets/images/headers/nav.png" alt="nav"></button>
       <h1><a class="sign-up__link" href="javascrip:void(0)"><img class="navbar__logo"
