--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/index.css">
+  <link rel="stylesheet" href="styles/index.scss">
   <title>Responsive web</title>
   <link rel="icon" type="image/x-icon" href="./assets/images/headers/favicon.png">
 </head>
@@ -367,10 +367,10 @@
             to
             men.</p>
           <div class="footer__social">
-            <img class="footer__icon" src="./assets/images/footers/twitter.png" alt="twitter">
-            <img class="footer__icon" src="./assets/images/footers/fb.png" alt="fb">
-            <img class="footer__icon" src="./assets/images/footers/intagram.png" alt="intagram">
-            <img class="footer__icon" src="./assets/images/footers/github.png" alt="github">
+           <a class="link" href="javascript:void(0)"><img class="footer__icon" src="./assets/images/footers/twitter.png" alt="twitter"></a>
+           <a class="link" href="javascript:void(0)"><img class="footer__icon" src="./assets/images/footers/fb.png" alt="fb"></a>
+           <a class="link" href="javascript:void(0)"><img class="footer__icon" src="./assets/images/footers/intagram.png" alt="intagram"></a>
+           <a class="link" href="javascript:void(0)"><img class="footer__icon" src="./assets/images/footers/github.png" alt="github"></a>
           </div>
         </div>
         <div class="footer__group">
