add background for icon

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -16,7 +16,7 @@
       <p class="sign-up__desc">Sign up and get 20% off to your first order. <a class="sign-up__advertise"
           href="javascript:void(0)">Sign Up
           Now</a></p>
-      <a href="javascript:void(0)"><img class="sign-up__off" src="assets/images/headers/off.svg" alt="off"></a>
+      <a class="sign-up__off icon-off" href="javascript:void(0)"></svg></a>
     </div>
   </div>
   <!-- sign up end  -->
@@ -36,11 +36,10 @@
       <form action="index.html">
         <input class="navbar__search" type="text" maxlength="20" placeholder="Search for products...">
       </form>
-      <div class="navbar__option">
-        <a href="javascrip:void(0)"><img class="navbar__option-search" src="assets/images/headers/search-icon.png"
-            alt="search-icon"></a>
-        <a href="javascrip:void(0)"><img src="assets/images/headers/cart.svg" alt="cart"></a>
-        <a href="javascrip:void(0)"><img src="assets/images/headers/login.svg" alt="login"></a>
+      <div class="navbar__option icon">
+        <a class="link icon-search" href="javascrip:void(0)"></a>
+        <a class="link icon-cart" href="javascrip:void(0)"></a>
+        <a class="link icon-login" href="javascrip:void(0)"></a>
       </div>
     </nav>
   </header>
@@ -289,8 +288,8 @@
       <div class="comment__heading">
         <h2 class="comment__title title title--primary">OUR HAPPY CUSTOMERS</h2>
         <div class="comment__action">
-          <button class="comment__btn"><img src="./assets/images/comments/next-icon.svg" alt="next-icon"></button>
-          <button class="comment__btn"><img src="./assets/images/comments/prev-icon.svg" alt="prev-icon"></button>
+          <a class="comment__btn icon-next" href="javascript:void(0)"></a>
+          <a class="comment__btn icon-prev" href="javascript:void(0)"></a>
         </div>
       </div>
       <div class="comment__list">
@@ -367,10 +366,10 @@
             to
             men.</p>
           <div class="footer__social">
-           <a class="link" href="javascript:void(0)"><img class="footer__icon" src="./assets/images/footers/twitter.png" alt="twitter"></a>
-           <a class="link" href="javascript:void(0)"><img class="footer__icon" src="./assets/images/footers/fb.png" alt="fb"></a>
-           <a class="link" href="javascript:void(0)"><img class="footer__icon" src="./assets/images/footers/intagram.png" alt="intagram"></a>
-           <a class="link" href="javascript:void(0)"><img class="footer__icon" src="./assets/images/footers/github.png" alt="github"></a>
+            <a class="link icon-twitter" href="javascript:void(0)"></a>
+            <a class="link icon-fb" href="javascript:void(0)"></a>
+            <a class="link icon-intagram" href="javascript:void(0)"></a>
+            <a class="link icon-github" href="javascript:void(0)"></a>
           </div>
         </div>
         <div class="footer__group">
