fix comments PR

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -47,7 +47,7 @@
 
   <!-- banner start  -->
   <section class="banner">
-    <div class="banner__wrapper container">
+    <div class="banner__wrapper">
       <div class="banner__content">
         <h2 class="banner__title title">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
         <p class="banner__desc desc">Browse through our diverse range of meticulously crafted garments,
@@ -86,14 +86,14 @@
 
   <!-- brand start  -->
   <section class="brand">
-    <div class="brand__wrapper container">
+    <div class="brand__wrapper">
       <img class="brand__img" src="./assets/images/brands/versace.png" alt="versace">
       <img class="brand__img" src="./assets/images/brands/zara.png" alt="zara">
       <img class="brand__img" src="./assets/images/brands/gucci.png" alt="gucci">
       <img class="brand__img" src="./assets/images/brands/prada.png" alt="prada">
       <img class="brand__img" src="./assets/images/brands/calvin.png" alt="calvin">
     </div>
-    <div class="brand__wrapper-xxl container">
+    <div class="brand__wrapper-xxl">
       <img class="brand__img" src="./assets/images/brands/versace-desktop.svg" alt="versace-desktop">
       <img class="brand__img" src="./assets/images/brands/zara-desktop.png" alt="zara-desktop">
       <img class="brand__img" src="./assets/images/brands/gucci-desktop.svg" alt="gucci-desktop">
@@ -104,7 +104,7 @@
   <!-- brand end  -->
 
   <!-- arrival start  -->
-  <div class="container">
+  <!-- <div class="container"> -->
     <section class="arrival">
       <h2 class="arrival__title title title--primary">new arrivals</h2>
       <div class="arrival__products">
@@ -264,6 +264,7 @@
       <button class="top-selling__btn btn btn--secondary">View All</button>
     </section>
     <!-- product end -->
+    <div class="container">
 
     <!-- browse start  -->
     <section class="browse">
@@ -284,7 +285,7 @@
     <!-- browse end  -->
 
     <!-- comment start  -->
-    <section class="comment container">
+    <section class="comment">
       <div class="comment__heading">
         <h2 class="comment__title title title--primary">OUR HAPPY CUSTOMERS</h2>
         <div class="comment__action">
