--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -28,7 +28,7 @@
       <h1><a class="sign-up__link" href="javascrip:void(0)"><img class="navbar__logo"
             src="./assets/images/headers/shopco.png" alt="shopco"></a></h1>
       <ul class="navbar__list">
-        <li><a class="link" href="javascrip:void(0)">Shop</a></li>
+        <li><a class="link" href="./product.html">Shop</a></li>
         <li><a class="link" href="javascrip:void(0)">On Sale</a></li>
         <li><a class="link" href="javascrip:void(0)">New Arrivals</a></li>
         <li><a class="link" href="javascrip:void(0)">Brand</a></li>
