fix style for copyright

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -406,7 +406,7 @@
           </ul>
         </div>
       </div>
-      <div class="copyright">
+      <div class="copyright container">
         <p>Shop.co © 2000-2023, All Rights Reserved</p>
         <div>
           <img class="copyright__img" src="./assets/images/footers/visa.svg" alt="visa">
