add background icon for navbar

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -16,7 +16,7 @@
       <p class="sign-up__desc">Sign up and get 20% off to your first order. <a class="sign-up__advertise"
           href="javascript:void(0)">Sign Up
           Now</a></p>
-      <a class="sign-up__off icon-off" href="javascript:void(0)"></svg></a>
+      <a class="sign-up__off icon-off" href="javascript:void(0)"></a>
     </div>
   </div>
   <!-- sign up end  -->
@@ -24,7 +24,7 @@
   <!-- header start  -->
   <header class="header">
     <nav class="navbar container">
-      <button class="navbar__nav"><img src="assets/images/headers/nav.png" alt="nav"></button>
+      <a class="navbar__nav icon-nav"></a>
       <h1><a class="sign-up__link" href="javascrip:void(0)"><img class="navbar__logo"
             src="./assets/images/headers/shopco.png" alt="shopco"></a></h1>
       <ul class="navbar__list">
