--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/index.scss">
+  <link rel="stylesheet"  href="styles/index.scss">
   <title>Responsive web</title>
-  <link rel="icon" type="image/x-icon" href="./assets/images/headers/favicon.png">
+  <link rel="icon" href="assets/images/headers/favicon.png">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
       <p class="sign-up__desc">Sign up and get 20% off to your first order. <a class="sign-up__advertise"
           href="javascript:void(0)">Sign Up
           Now</a></p>
-      <a class="sign-up__off icon-off" href="javascript:void(0)"></a>
+      <a class="sign-up__off icon-off" aria-label="icon-off" href="javascript:void(0)"></a>
     </div>
   </div>
   <!-- sign up end  -->
@@ -24,7 +24,7 @@
   <!-- header start  -->
   <header class="header">
     <nav class="navbar container">
-      <a class="navbar__nav icon-nav"></a>
+      <a class="navbar__nav icon-nav" aria-label="icon-nav" href="javascript:void(0)"></a>
       <h1><a class="sign-up__link" href="javascrip:void(0)"><img class="navbar__logo"
             src="./assets/images/headers/shopco.png" alt="shopco"></a></h1>
       <ul class="navbar__list">
@@ -34,12 +34,12 @@
         <li><a class="link" href="javascrip:void(0)">Brand</a></li>
       </ul>
       <form action="index.html">
-        <input class="navbar__search" type="text" maxlength="20" placeholder="Search for products...">
-      </form>
+        <input class="navbar__search" type="text" name="search" maxlength="20" placeholder="Search for products...">
+      </form >
       <div class="navbar__option icon">
-        <a class="link icon-search" href="javascrip:void(0)"></a>
-        <a class="link icon-cart" href="javascrip:void(0)"></a>
-        <a class="link icon-login" href="javascrip:void(0)"></a>
+        <a class="link icon-search" aria-label="icon-search" href="javascrip:void(0)"></a>
+        <a class="link icon-cart" aria-label="icon-cart" href="javascrip:void(0)"></a>
+        <a class="link icon-login" aria-label="icon-login" href="javascrip:void(0)"></a>
       </div>
     </nav>
   </header>
@@ -291,8 +291,8 @@
       <div class="feedback__heading">
         <h2 class="feedback__title title title--primary">OUR HAPPY CUSTOMERS</h2>
         <div class="feedback__action">
-          <a class="feedback__btn icon-next" href="javascript:void(0)"></a>
-          <a class="feedback__btn icon-prev" href="javascript:void(0)"></a>
+          <a class="feedback__btn icon-next" aria-label="icon-next" href="javascript:void(0)"></a>
+          <a class="feedback__btn icon-prev" aria-label="icon-prev" href="javascript:void(0)"></a>
         </div>
       </div>
       <div class="feedback__list">
@@ -355,8 +355,8 @@
     <fieldset class="footer">
       <legend class="contact container">
         <h2 class="footer__title title">STAY UPTO DATE ABOUT OUR LATEST OFFERS</h2>
-        <form class="contact__box" action="">
-          <input class="contact__form" type="text" name="" maxlength="20" placeholder="Enter your email address">
+        <form class="contact__box">
+          <input class="contact__form" type="text" maxlength="20" placeholder="Enter your email address">
           <button class="footer__btn btn btn--light">Subscribe to Newsletter</button>
         </form>
       </legend>
@@ -369,10 +369,10 @@
             to
             men.</p>
           <div class="action__social">
-            <a class="link icon-twitter" href="javascript:void(0)"></a>
-            <a class="link icon-fb" href="javascript:void(0)"></a>
-            <a class="link icon-intagram" href="javascript:void(0)"></a>
-            <a class="link icon-github" href="javascript:void(0)"></a>
+            <a class="link icon-twitter" aria-label="icon-twitter" href="javascript:void(0)"></a>
+            <a class="link icon-fb" aria-label="icon-fb" href="javascript:void(0)"></a>
+            <a class="link icon-intagram" aria-label="icon-intagram" href="javascript:void(0)"></a>
+            <a class="link icon-github" aria-label="icon-github" href="javascript:void(0)"></a>
           </div>
         </div>
         <div class="action__group">
